--- a/2048game.cabal
+++ b/2048game.cabal
@@ -4,6 +4,7 @@
 name:                2048game
 version:             0.1.0
 synopsis:            An implementation of the 2048 game in Haskell.
+homepage:            https://gitlab.com/gRastello/2048game
 -- description:         
 license:             GPL-3
 license-file:        LICENSE
